Added temp controller for process master
